force-app/main/default/objects/Free_Trial__c/Free_Trial__c.object-meta.xml
<CustomObject>
    <label>Free Trial</label>
    <nameField>
        <label>Free Trial Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Free Trials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>