force-app/main/default/objects/Free_Trial__c/fields/Final_Approver__c.field-meta.xml
<CustomField>
    <fullName>Final_Approver__c</fullName>
    <label>Final Approver</label>
    <type>TextArea</type>
</CustomField>