force-app/main/default/objects/Free_Trial__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Free Trials</relationshipLabel>
    <relationshipName>Free_Trials</relationshipName>
    <type>Lookup</type>
</CustomField>